# financial-data

./: .gitignore  README.md  pyproject.toml
database/: create_tables.sql
financial_data/: data_args.py  main.py
financial_data/config/: database.py
financial_data/services/: data_processor.py  yahoo_finance.py
financial_data/utils/: data_utils.py  db_utils.py
